# smart-find

./: .gitattributes  .gitignore  .modalignore  Dockerfile  README.md  gradio_app.py  modal_app.py  pyproject.toml
app/: feature_extraction_pipeline.py  ingest_pipeline.py  search_pipeline.py  ui_app.py
core/: feature_extraction_pipeline.py  ingest_pipeline.py  llm_utils.py  prompts.py  report_utils.py  search_pipeline.py
qdrant_storage/: meta.json
qdrant_storage/collection/ecommerce-products/: storage.sqlite
utils/: vector_store.py
