[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-find"
version = "0.1.0"
description = "A smart product search engine with RAG capabilities"
authors = [
    {name = "Author"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai",
    "pandas",
    "tqdm",
    "qdrant-client",
    "python-dotenv",
    "numpy",
    "cohere",
    "gradio",
    "modal",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.setuptools]
py-modules = [
    "core.feature_extraction_pipeline",
    "core.ingest_pipeline",
    "core.search_pipeline",
    "utils.llm_utils",
    "utils.prompts",
    "utils.vector_store",
    "gradio_app",
]
include-package-data = false

[tool.setuptools.packages.find]
exclude = ["data*", "qdrant_storage*"]
